# oil-and-rope-dispatcher

./: .envrc.example  LICENSE  README.md  pyproject.toml  setup.cfg
oilandrope_dispatcher/: __init__.py  gunicorn_config.py
oilandrope_dispatcher/routes/: dashboard.py  github.py
src/: app.py
tests/routes/: test_dashboard.py
